--- a/aula-030723/index.html
+++ b/aula-030723/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-Br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <title>JavaScript</title>
+    <script defer src="scriptPage.js"></script>
 </head>
 <body>
     <h1>JavaScript</h1>
